[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "groq>=0.23.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.12.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "sqlparse>=0.5.3",
    "streamlit>=1.44.1",
    "xlsxwriter>=3.2.3",
]
