[project]
name = "DataSphereAnalytics"
version = "1.0.0"
description = "Advanced Text-to-SQL Analytics Platform with visualization and AI capabilities"
authors = [
    {name = "DataSphere Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "streamlit>=1.44.1",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    
    # Database connectors
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",  # PostgreSQL
    "pymysql>=1.1.1",           # MySQL
    "pymongo>=4.12.0",          # MongoDB
    "sqlparse>=0.5.3",          # SQL parsing
    
    # AI and NLP
    "google-generativeai>=0.8.5",  # Gemini API
    "groq>=0.23.0",                # Groq API
    
    # Data processing and analysis
    "scipy>=1.15.2",
    
    # Visualization
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "networkx>=3.4.2",          # Graph visualization
    
    # Export functionality
    "xlsxwriter>=3.2.3",        # Excel export
    
    # Utilities
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",     # Environment variables
    "pydantic>=2.5.2",          # Data validation
    
    # Additional visualization
    "altair>=5.2.0",            # Interactive charts
    "seaborn>=0.13.0",          # Statistical visualizations
    
    # Schema visualization
    "graphviz>=0.20.1",         # ER diagrams
    
    # Date/time handling
    "pytz>=2023.3",             # Timezone support
    
    # File handling
    "openpyxl>=3.1.2",          # Excel file support
    "pillow>=10.1.0",           # Image processing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
